deployment/bases/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: website
  namespace: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: website
    spec:
      containers:
      - image: crownlabs/website
        name: website
        resources: {}
