deployment/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: website
  namespace: website
spec:
  rules:
    - host: crownlabs.polito.it
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 80
            path: /
  tls:
    - hosts:
        - crownlabs.polito.it
